--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
@@ -21,6 +22,7 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
     "validate.js": "^0.13.1"
   },
