--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
     "react": "18.2.0",
@@ -24,10 +26,10 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-uuid": "^2.0.1",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
