--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-uuid": "^2.0.1",
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "expo-clipboard": "~4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
