--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
+    "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-popup-menu": "^0.16.1",
@@ -31,8 +33,7 @@
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1",
-    "expo-clipboard": "~4.1.2"
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
