--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
@@ -33,7 +34,8 @@
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
