--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/dumbbel-icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/anothBg.jpg",
+      "image": "./assets/images/splash.jpg",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
