--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-uuid": "^2.0.1",
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1",
-    "react-native-svg": "13.4.0"
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
