--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
