--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.0-rc.3",
     "validate.js": "^0.13.1",
-    "expo-av": "~13.2.1"
+    "expo-av": "~13.2.1",
+    "expo-updates": "~0.16.4",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
