--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "validate.js": "^0.13.1",
     "expo-av": "~13.2.1",
     "expo-updates": "~0.16.4",
-    "expo-splash-screen": "~0.18.2"
+    "expo-splash-screen": "~0.18.2",
+    "expo-notifications": "~0.18.1",
+    "expo-device": "~5.2.1",
+    "expo-application": "~5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
