Adding the group chat feature

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Fitness",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/newIcon.png",
+    "icon": "./assets/images/bodybuilder.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/splash.png",
